Update readme to reflect new build instructions