@@ -5,17 +5,13 @@ Spring Integration
 
 To check out the project and build from source, do the following:
 
-    git clone --recursive git://github.com/SpringSource/spring-integration.git
+    git clone git://github.com/SpringSource/spring-integration.git
     cd spring-integration
     ./gradlew build
 
-> Note: the **<code>--recursive</code>** switch above is important, as spring-integration uses
-> *git submodules*, which must themselves be cloned and initialized. If **<code>--recursive</code>**
-> is omitted, the checkout becomes a multi-step process.
+If you encounter out of memory errors during the build, increase available heap and permgen for Gradle:
 
-If you encounter heap space errors during the build, increase the heap size for Gradle:
-
-    GRADLE_OPTS="-Xmx1024m"
+    GRADLE_OPTS='-XX:MaxPermSize=1024m -Xmx1024m'
 
 # Using Eclipse
 
@@ -40,9 +36,9 @@ To generate IDEA metadata (.iml and .ipr files), do the following:
 
 To build the JavaDoc, do the following from within the root directory:
 
-    ./gradlew :docs:api
+    ./gradlew aggregatedJavadoc
 
-The result will be available in **'docs/build/api'**.
+The result will be available in **'build/api'**.
 
 # OSGI Notes
 
